add tour controllers